; ModuleID = '/home/carl/AnghaBench/linux/drivers/net/ethernet/mellanox/mlxsw/extr_switchx2.c_mlxsw_sx_port_remove.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/net/ethernet/mellanox/mlxsw/extr_switchx2.c_mlxsw_sx_port_remove.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.mlxsw_sx = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.mlxsw_sx*, i32)* @mlxsw_sx_port_remove to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @mlxsw_sx_port_remove(%struct.mlxsw_sx* %0, i32 %1) #0 {
  %3 = alloca %struct.mlxsw_sx*, align 8
  %4 = alloca i32, align 4
  store %struct.mlxsw_sx* %0, %struct.mlxsw_sx** %3, align 8
  store i32 %1, i32* %4, align 4
  %5 = load %struct.mlxsw_sx*, %struct.mlxsw_sx** %3, align 8
  %6 = load i32, i32* %4, align 4
  %7 = call i32 @__mlxsw_sx_port_remove(%struct.mlxsw_sx* %5, i32 %6)
  %8 = load %struct.mlxsw_sx*, %struct.mlxsw_sx** %3, align 8
  %9 = getelementptr inbounds %struct.mlxsw_sx, %struct.mlxsw_sx* %8, i32 0, i32 0
  %10 = load i32, i32* %9, align 4
  %11 = load i32, i32* %4, align 4
  %12 = call i32 @mlxsw_core_port_fini(i32 %10, i32 %11)
  ret void
}

declare dso_local i32 @__mlxsw_sx_port_remove(%struct.mlxsw_sx*, i32) #1

declare dso_local i32 @mlxsw_core_port_fini(i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
